--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -83,61 +83,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Test SSH connectivity
-        uses: appleboy/ssh-action@v1
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: echo "SSH connection ok"
-
-      - name: Ensure remote target directory exists
-        uses: appleboy/ssh-action@v1
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            if [ -d /opt/ric ]; then
-              echo "Remote directory /opt/ric exists"
-            else
-              echo "Remote directory /opt/ric is missing" >&2
-              exit 1
-            fi
-      - name: Create /opt/ric if missing
-        uses: appleboy/ssh-action@v1
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: sudo mkdir -p /opt/ric
-
-      - name: Ensure remote target directory is writable
-        uses: appleboy/ssh-action@v1
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            set -e
-            sudo chown -R $USER /opt/ric
-            sudo find /opt/ric -type d -exec chmod u+rwx {} +
-            sudo find /opt/ric -type f -exec chmod u+rw {} +
-            echo "/opt/ric ownership set to $USER"
-
-      - name: Ensure remote target directory is writable
-        uses: appleboy/ssh-action@v1
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            set -e
-            sudo chown -R $USER /opt/ric
-            sudo find /opt/ric -type d -exec chmod u+rwx {} +
-            sudo find /opt/ric -type f -exec chmod u+rw {} +
-            echo "/opt/ric ownership set to $USER"
-
       - name: Copy docker compose prod file via SSH
         uses: appleboy/scp-action@v1
         with:
@@ -145,7 +90,7 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "docker-compose.prod.yaml"
-          target: "/opt/ric"
+          target: /opt/ric
 
       - name: Copy nginx config via SSH
         uses: appleboy/scp-action@v1
@@ -154,7 +99,7 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "nginx"
-          target: "/opt/ric"
+          target: /opt/ric
 
       - name: Copy certbot scaffolding via SSH
         uses: appleboy/scp-action@v1
@@ -163,7 +108,7 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "certbot"
-          target: "/opt/ric"
+          target: /opt/ric
 
       - name: Deploy application via SSH
         uses: appleboy/ssh-action@v1
