--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -104,6 +104,26 @@ jobs:
               echo "Remote directory /opt/ric is missing" >&2
               exit 1
             fi
+      - name: Create /opt/ric if missing
+        uses: appleboy/ssh-action@v1
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: sudo mkdir -p /opt/ric
+
+      - name: Ensure remote target directory is writable
+        uses: appleboy/ssh-action@v1
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            set -e
+            sudo chown -R $USER /opt/ric
+            sudo find /opt/ric -type d -exec chmod u+rwx {} +
+            sudo find /opt/ric -type f -exec chmod u+rw {} +
+            echo "/opt/ric ownership set to $USER"
 
       - name: Ensure remote target directory is writable
         uses: appleboy/ssh-action@v1
