--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -87,7 +87,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Copy docker compose prod file via SSH
-        uses: appleboy/scp-action@v1
+        uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
@@ -96,7 +96,7 @@ jobs:
           target: /opt/ric
 
       - name: Copy nginx config via SSH
-        uses: appleboy/scp-action@v1
+        uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
@@ -105,7 +105,7 @@ jobs:
           target: /opt/ric
 
       - name: Copy certbot scaffolding via SSH
-        uses: appleboy/scp-action@v1
+        uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
