--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
             context: ./frontend
             file: ./frontend/Dockerfile.prod
             build-args: |
-              NEXT_PUBLIC_API_URL=${{ vars.NEXT_PUBLIC_API_URL }}
+              NEXT_PUBLIC_API_URL=https://api.cinestats5050.fr
           - name: nginx
             image: ric-nginx
             context: ./nginx
@@ -70,7 +70,7 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          build-args: ${{ matrix.build-args || '' }}
+          build-args: ${{ matrix.build-args ||  }}
 
   deploy:
     runs-on: ubuntu-latest
